added additional info to xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="addit_info_content_description">Дополнительная информация</string>
     <string name="set_time_content_description">Указать время</string>
     <string name="add_in_favorite_content_description">Добавить в избранное</string>
+    <string name="add_addit_info_hint">Добавьте дополнительную информацию</string>
 </resources>
