--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="set_time_content_description">Указать время</string>
     <string name="add_in_favorite_content_description">Добавить в избранное</string>
     <string name="add_addit_info_hint">Добавьте дополнительную информацию</string>
+    <string name="completed">Выполнено</string>
 </resources>
