added taskViewModel and current task fragment implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="add_in_favorite_content_description">Добавить в избранное</string>
     <string name="add_addit_info_hint">Добавьте дополнительную информацию</string>
     <string name="completed">Выполнено</string>
+    <string name="uncompleted">Невыполненого</string>
 </resources>
